--- a/README
+++ b/README
@@ -1,2 +1,4 @@
+AUTHOR: abdoulaye KAMA
 Bibliotheque pour les gestions des modems gsm.
+
 Cette bibliotheque se base essentiellement sur les commandes AT
